@@ -3,6 +3,7 @@ package xyz.derkades.serverselectorx.servlet;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
@@ -27,7 +28,7 @@ public class GetFile extends HttpServlet {
 		}
 
 		response.setStatus(HttpServletResponse.SC_OK);
-		final Path file = Path.of(request.getParameter("file"));
+		final Path file = Paths.get(request.getParameter("file"));
 		final String type = Files.probeContentType(file);
 		response.setContentType(type != null ? type : "application/octet-stream");
 		Files.copy(file, response.getOutputStream());
